@@ -5,7 +5,7 @@ factory_boy == 3.2.1
 Sphinx == 5.3.0
 django_extensions == 3.2.1
 psycopg2-binary == 2.9.5
-django-debug-toolbar == 3.8.1
+django-debug-toolbar == 4.1.0
 
 # Code quality
 # ------------------------------------------------------------------------------
