@@ -22,6 +22,7 @@ from .course_views import CourseUpdateView  # noqa F401
 from .course_views import PaySlipMontreux  # noqa F401
 from .dashboard_views import HomePageView, RegistrationDatesView  # noqa F401
 from .mail_views import MailArchiveListView  # noqa F401
+from .mail_views import MailConfirmationCoursesView  # noqa F401
 from .mail_views import MailConfirmationParticipantsView  # noqa F401
 from .mail_views import MailCourseInstructorsView  # noqa F401
 from .mail_views import MailCreateView  # noqa F401
