@@ -1,12 +1,16 @@
 from django.conf import settings
+from django.contrib import messages
 from django.contrib.sites.shortcuts import get_current_site
+from django.http import HttpResponseRedirect
 from django.urls import reverse, reverse_lazy
 from django.views.generic import ListView
 
 import mailer.views as mailer_views
+from activities.models import Course
 from mailer.forms import AdminMailForm
 from mailer.mixins import ArchivedMailMixin, ParticipantsMixin, TemplatedEmailMixin
 from mailer.models import MailArchive
+from mailer.tasks import send_mail
 from profiles.models import FamilyUser
 from registrations.models import Bill, Registration
 from registrations.views import BillMixin
@@ -89,6 +93,80 @@ class MailConfirmationParticipantsView(
 
     def get_cancel_url(self):
         return self.course.backend_url
+
+
+class MailConfirmationCoursesView(
+    BackendMixin, ParticipantsMixin, TemplatedEmailMixin, mailer_views.BrowsableMailPreviewView
+):
+    subject_template = "mailer/course_begin_subject.txt"
+    message_template = "mailer/course_begin.txt"
+    template_name = "backend/mail/preview-browse.html"
+    edit_url = None
+    group_mails = False
+    mail_type = "convocation"
+
+    def get_success_message(self):
+        return self.success_message % {"number": sum([course.participants.count() for course in self.courses])}
+
+    def get_recipients(self):
+        qs = self.course.participants.select_related("child__family")
+        all_recipients = [registration.child.family for registration in qs.all()]
+        if self.group_mails:
+            return list(set(all_recipients))
+        return all_recipients
+
+    def get_success_url(self):
+        return reverse("backend:course-list")
+
+    def get_cancel_url(self):
+        return reverse("backend:course-list")
+
+    def get_context_data(self, **kwargs):
+        kwargs["course"] = self.course
+        kwargs["courses"] = self.courses
+        kwargs["base_url"] = self.request.path + "?" + "&".join([f"c={course.pk}" for course in self.courses])
+
+        # noinspection PyUnresolvedReferences
+        return super().get_context_data(**kwargs)
+
+    def get(self, request, *args, **kwargs):
+        courses_pk = [int(pk) for pk in self.request.GET.getlist("c") if pk.isdigit()]
+        self.courses = Course.objects.filter(pk__in=courses_pk)
+        selected_course_pk = self.request.GET.get("selected") or self.courses.first().pk
+        self.course = Course.objects.get(pk=selected_course_pk)
+        return super(mailer_views.BrowsableMailPreviewView, self).get(request, *args, **kwargs)
+
+    def post(self, request, *args, **kwargs):
+        courses_pk = [int(pk) for pk in self.request.GET.getlist("c") if pk.isdigit()]
+        self.courses = Course.objects.filter(pk__in=courses_pk)
+        for course in self.courses:
+            self.course = course
+            context = {"course": self.course}
+            for registration in course.participants.all():
+                self.send_mail(
+                    recipient=registration.child.family,
+                    bcc_recipients=self.get_bcc_recipients(),
+                    base_context=context,
+                    child=registration.child,
+                )
+            self.create_receipt()
+
+        messages.success(request, self.get_success_message())
+        return HttpResponseRedirect(self.get_success_url())
+
+    def send_mail(self, recipient, bcc_recipients, base_context, child=None):
+        mail_context = self.get_mail_context(base_context, recipient, bcc_recipients, child)
+        message = self.get_mail_body(mail_context)
+        send_mail.delay(
+            subject=self.get_subject(mail_context),
+            message=message,
+            from_email=self.get_from_address(),
+            recipients=[recipient.get_email_string()],
+            reply_to=[self.get_reply_to_address()],
+            bcc=[user.get_email_string() for user in bcc_recipients],
+            attachments=[attachment.pk for attachment in self.get_attachments(mail_context)],
+        )
+        return message
 
 
 class NotPaidYetView(BackendMixin, BillMixin, TemplatedEmailMixin, mailer_views.BrowsableMailPreviewView):
